--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/openblockcc/openblock-link#readme",
   "dependencies": {
+    "@abandonware/bluetooth-hci-socket": "^0.5.3-12",
     "@abandonware/noble": "1.9.2-15",
     "ansi-string": "^0.2.1",
     "cli-color": "^2.0.1",
